Name:                maelstrom

Version:             0.0.1

Synopsis:            A distributed, fault-tolerant, soft real-time stream processing platform.

Description:         Maelstrom is a platform for generalized and soft real-time computational work-loads across a cluster of nodes.

Homepage:            https://github.com/ixmatus/maelstrom

License:             BSD3

License-file:        LICENSE

Author:              Parnell Springmeyer

Maintainer:          ixmatus@gmail.com

Copyright:           (c) 2012 Parnell Springmeyer

Category:            HPC Computation Cluster Distributed Stream-Computing

Build-type:          Simple

Stability:           alpha

Bug-reports:         https://github.com/ixmatus/maelstrom/issues

Package-url:         http://hackage.haskell.org/package/maelstrom

Tested-with:         GHC == 7.4.1

Data-files:          README.md

Cabal-version:       >=1.14.0

Executable maelstrom

  Main-is: maelstrom.hs

  Hs-source-dirs: src

  cpp-options: -Dcabal

  Ghc-options: -Wall

  Build-depends: base >= 4.2.0.0 && < 4.6

Source-repository head
  Type:     git
  Location: git://github.com/ixmatus/maelstrom.git