name:                maelstrom
version:             0.0.1.0
synopsis:            Distributed, fault-tolerant, soft real-time stream computing platform

description:         Maelstrom is a platform for distributed, fault-tolerant,
                     and soft real-time computing; similar in philosophy to Marz's
                     excellent Storm project but built using Haskell and Pipes :)

homepage:            https://github.com/ixmatus/maelstrom
license:             BSD3
license-file:        LICENSE
author:              Parnell Springmeyer
maintainer:          parnell@ixmat.us
copyright:           (c) 2013 Parnell Springmeyer
Bug-reports:         https://github.com/ixmatus/maelstrom/issues
Package-url:         http://hackage.haskell.org/package/maelstrom
category:            Data
build-type:          Simple
Tested-with:         GHC == 7.6.3
cabal-version:       >=1.14

extra-source-files:
    LICENSE
    README.md
    CHANGES

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base ==4.6.*

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Maelstrom.hs
  other-modules:
--    QC.Engines

  ghc-options:
    -Wall -threaded -rtsopts

  build-depends:
    maelstrom,
    base                       >= 4.5,
    QuickCheck                 >= 2.5,
    test-framework             >= 0.8,
    test-framework-quickcheck2 >= 0.3.0,
    test-framework-hunit       >= 0.3.0
